WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177113
tiled-drawing/tiled-backing-in-window.html fails on Retina displays
https://bugs.webkit.org/show_bug.cgi?id=177113
Summary
tiled-drawing/tiled-backing-in-window.html fails on Retina displays
Simon Fraser (smfr)
Reported
2017-09-18 16:47:04 PDT
This test always fails on Retina displays; the post-view-window removal layer tree dump has 2x contentsScale on layers.
Attachments
Patch
(5.01 KB, patch)
2017-09-18 16:54 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-09-18 16:54:04 PDT
Created
attachment 321152
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-09-19 20:47:23 PDT
https://trac.webkit.org/r222247
Radar WebKit Bug Importer
Comment 3
2017-09-27 12:21:24 PDT
<
rdar://problem/34693112
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug